Paste Deployment News
=====================

Version 0.2 (svn trunk)
-----------------------

* Added ``filter-app:`` and ``pipeline:`` sections.  `Docs
  <paste-deploy.html#filter-composition>`__.

* Added ``paste.filter_app_factory1`` (`doc
  <paste-deploy.html#paste-filter-app-factory1>`__) and
  ``paste.server_runner1`` (`doc
  <paste-deploy.html#paste-server-runner1>`__) protocols.

* Added ``paste.deploy.converters`` module for handling the
  string values that are common with this system.

Version 0.1
-----------

Initial version released.  It's all new.