@@ -1,22 +1,22 @@
-[paste.app_factory1]
+[paste.app_factory]
 
       basic_app=fakeapp.apps:make_basic_app
       other=fakeapp.apps:make_basic_app2
       configed=fakeapp.configapps:SimpleApp.make_app
       
 
-[paste.filter_factory1]
-
-      caps=fakeapp.apps:make_cap_filter
-      
-
-[paste.composit_factory1]
+[paste.composit_factory]
 
       remote_addr=fakeapp.apps:make_remote_addr
       
 
-[paste.filter_app_factory1]
+[paste.filter_app_factory]
 
       caps2=fakeapp.apps:CapFilter
+      
+
+[paste.filter_factory]
+
+      caps=fakeapp.apps:make_cap_filter
       
 
