@@ -4,7 +4,7 @@ def3 = c
 
 [app:main]
 # Equivalent to the egg reference, but just for kicks...
-paste.app_factory1 = fakeapp.configapps:SimpleApp.make_app
+paste.app_factory = fakeapp.configapps:SimpleApp.make_app
 set glob = orig
 bob = your uncle
 another = BAR
